# skillAgent

./: .gitignore  LICENSE  README.en.md  README.md  cli.py  config.example.yaml  config.yaml  main.py  pyproject.toml  requirements.txt
api/: server.py
core/: agent.py  config.py  context.py  i18n.py  llm.py  prompt_loader.py
data/: agent.db
data/chromadb/: chroma.sqlite3
knowledge/: knowledge_manager.py  vector_store.py
locales/zh/LC_MESSAGES/: messages.mo  messages.po
prompts/: en.yaml  zh.yaml
scripts/: compile_messages.py  setup.ps1  setup.sh
skills/: almanac_skill.py  base.py  datetime_skill.py  divination_skill.py  knowledge_skill.py  lucky_today_skill.py  registry.py  tarot_career_skill.py  weather_skill.py  web_search.py
storage/: database.py
vcbal_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
